enums and match

--- a/rust-samples/Cargo.toml
+++ b/rust-samples/Cargo.toml
@@ -36,8 +36,8 @@ name="enums"
 path="examples/enums.rs"
 
 [[example]]
-name="match"
-path="examples/match.rs"
+name="errors"
+path="examples/errors.rs"
 
 [[example]]
 name="mutability"
